--- a/client/components/States/GameOver/gameOver.scss
+++ b/client/components/States/GameOver/gameOver.scss
@@ -7,6 +7,13 @@
   position: relative;
 }
 
+.feedbackIcon {
+  fill: firebrick;
+  margin-right: 0.2rem;
+  height: 1rem;
+  width: 1rem;
+}
+
 .screen {
   align-items: center;
   display: flex;
@@ -19,6 +26,8 @@
   z-index: 10;
 
   & button {
+    align-items: center;
+    display: flex;
     margin-top: 2rem;
   }
 }
